--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -305,7 +305,7 @@ Wie unter dem Punkt Qualitätszielbestimmungen aufgeführt, legen wir unsere Pri
   \subsection{Architekturdiagramm}
   \begin{center}
   	\vspace{100px}
-  	\includegraphics[width=0.8\textwidth]{./Diagramme/Archi4.png}
+  	\includegraphics[width=0.8\textwidth]{./Diagramme/Achi5.png}
   \end{center}
   \clearpage %%sieht sonst noch zerrissener aus;    Gehts nicht irgendwie schöner? Sodass das Diagramm ganz oben quasi anliegt?
   \subsection{Kurze Erläuterung zum Architekturdiagramm}
