--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -231,7 +231,6 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
     \begin{itemize}
 
       \item[] \textsf{Weitere Modi:}
-        \item[/F190/] \textsf{Modus Livedaten: \textit{(versteckt)}} Visualisieren der Sensorrohdaten als Graphen.%% ist das noch aktuell???
         \item[/F200/] \textsf{Zählmodus:} Zählen von Liegestützen oder Sit-ups mit Hilfe von /F170/ und /F180/.
         \item[/F210/] \textsf{Start/Stopp Musikmodus:} Musik stoppt wenn Nutzer stehen bleibt, läuft wenn der Nutzer läuft. Bei diesem Modus werden keine Resultate angezeigt.
       
@@ -305,7 +304,7 @@ Wie unter dem Punkt Qualitätszielbestimmungen aufgeführt, legen wir unsere Pri
   \subsection{Architekturdiagramm}
   \begin{center}
   	\vspace{100px}
-  	\includegraphics[width=0.8\textwidth]{./Diagramme/Achi5.png}
+  	\includegraphics[width=0.8\textwidth]{./Diagramme/Archi4.png}
   \end{center}
   \clearpage %%sieht sonst noch zerrissener aus;    Gehts nicht irgendwie schöner? Sodass das Diagramm ganz oben quasi anliegt?
   \subsection{Kurze Erläuterung zum Architekturdiagramm}
@@ -483,7 +482,7 @@ Erst nach dem bestehen aller hier aufgeführten Tests und Szenarien ist das Prod
     \item[/T070/] Der Nutzer kann die App über sein Smartphone starten. Die App startet im Laufmodus.
     \item[/T090/] Der Nutzer kann die Modi über ein einblendebares Menü wechseln, während ein Modus ausgewählt ist.
     \item[/T100/] Der Nutzer kann sehen, ob er gerade \glqq läuft\grqq{} oder \glqq steht\grqq{}.
-    \item[/T110/] Der Nutzer kann den modusspezifischen \Gls{Vorgang} starten. Dann wird der Modus nach seiner Beschreibung aktiv ausgeführt. Dies gilt für jeden Modus außer den Modus \glqq Livedaten\grqq.
+    \item[/T110/] Der Nutzer kann den modusspezifischen \Gls{Vorgang} starten. Dann wird der Modus nach seiner Beschreibung aktiv ausgeführt.
     \item[/T120/] Der Nutzer kann den modusspezifischen \Gls{Vorgang} stoppen.
     \item[/T130/] Die App zeigt nach Stoppen des Vorgangs das Vorgansresultats an bis neuer \Gls{Vorgang} gestartet wird.
     \item[/T132/] Die App zeigt die \gls{Schrittfrequenz} im Modus \glqq{}Laufmodus\grqq{} an, sobald der Laufmodus gestartet wird.
@@ -538,16 +537,6 @@ Erst nach dem bestehen aller hier aufgeführten Tests und Szenarien ist das Prod
       \end{enumerate}
 
     \subsubsection{Wunschanforderungen}
-        
-    \paragraph{Livedaten (/F190/)}%%nicht mehr aktuell??
-      \begin{enumerate}
-        \item Der Nutzer startet die App. (/T070/)
-        \item Der Nutzer verbindet in der App die \gls{Earables}, über \gls{BLE} mit seinem Smartphone.
-        \item Nach dem Startvorgang der App wechselt der Nutzer in den Modus \glqq Livedaten\grqq . (/F190/)
-        \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
-        \item Der Nutzer startet den gewählten \Gls{Vorgang}.
-        \item Die App zeigt die korrekten Sensordaten an. (/T190/)
-      \end{enumerate}
 
     
     \paragraph{Zählmodus (/F200/)}
