--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -260,7 +260,7 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
   
   
       \end{itemize}
-
+\vspace{1cm}
 \section{Produktdaten}
 Die App soll dem Nutzer die Möglichkeit zur Verfügung stellen, seine Trainingsdaten auch nach Beenden der App weiterhin zu Nutzen. Zu diesem Zweck werden die Trainingsdaten auf dem Smartphone gespeichert; immer sobald ein Vorgang abgeschlossen ist.
 \begin{itemize}
@@ -269,7 +269,7 @@ Die App soll dem Nutzer die Möglichkeit zur Verfügung stellen, seine Trainings
 	\item[/PD040/] Die gesammelten \Gls{Vorgangsdaten} werden auf dem Gerät in einer Datenbank gespeichert, siehe /F310/.
 \end{itemize}
 
-
+\vspace{1cm}
 \section{Nichtfunktionale Anforderungen}
 Wie unter dem Punkt Qualitätszielbestimmungen aufgeführt, legen wir unsere Priorität vor allem auf Korrektheit und Benutzerfreundlichkeit. Um die Benutzerfreundlichkeit zu gewährleisten, werden hier einige Anforderungen an die Stabilität, den Speicherplatz und das Laufzeitverhalten gestellt. Für das korrekte Funktionieren werden weitere allgemeine Anforderungen formuliert.
 \subsection{Allgemein}
@@ -334,7 +334,7 @@ Beim Starten der App landet der Nutzer automatisch im Laufmodus. Bevor ein Modus
 \section{Benutzeroberfläche}
 \subsection{Einführung}
 Die \Gls{GUI} wird durch die App realisiert. Dabei kann man die einzelnen Modi über das Navigationsmenü auswählen. Jeder Modus hat zwei Seiten; eine Übersichtsseite und eine aktive Seite, welche während des aktiven \Gls{Vorgang} angezeigt wird. Für die weiteren Funktionen(Einstellungen, Dateienexport/-import) bietet die Applikation ebenfalls spezielle Seiten an.
-Online kann bereits eine Mock-Up \Gls{GUI} angesehne werden mithilfe des Design-Tools \glqq Mock-up\grqq{} über den angegebenen Link in der Fußnote \footnote[1]{Mock-Up Prototyp: https://app.moqups.com/448nRiafse/view/page/a70dc1e41?ui=0}
+Online kann bereits eine Mock-Up \Gls{GUI} angesehne werden mithilfe des Design-Tools \glqq Mock-up\grqq{} über den angegebenen Link in der Fußnote \footnote[1]{Prototyp: https://app.moqups.com/448nRiafse/view/page/a70dc1e41?ui=0 (nicht vollständig)}
 \subsection{Mock-Up Design}
 Die folgenden Abbildungen zeigen das Design der App.
 \begin{figure}[ht!]
@@ -458,7 +458,7 @@ Dagegen ist bei der App hauptsächlich die Benutzerfreundlichkeit wichtig, währ
   \hline
 
 \end{tabular}
-
+\vspace{1cm}
 \section{Globale Testfälle und Szenarien}
 Die Testfälle sollen sicherstellen, dass alle funktionalen Anforderungen korrekt implementiert und umgesetzt wurden.
 Die Nummerierung der globalen Testfälle richtet sich nach der Nummerierung der funktionalen Anforderungen.\\
