--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -223,36 +223,38 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
     \end{itemize}
   \subsection{Wunschanforderungen}
     \subsubsection{Erweiterungsmodul}
-      Weitere Datenauswertung:
+      \textsf{Weitere Datenauswertung:}
       \begin{itemize}
       \item[/F170/] \textsf{Erkennung Sit-ups} Das Erweiterungsmodul kann erkennen, ob der Nutzer Sit-ups macht.
       \item[/F180/] \textsf{Erkennung Liegestütze} Das Erweiterungsmodul kann erkennen, ob der Nutzer Liegestütze macht.
       \end{itemize} 
     \subsubsection{App}
-    
+    \textsf{Weitere Modi:}
     \begin{itemize}
 
-      \item[] \textsf{Weitere Modi:}
+       
+       
         \item[/F200/] \textsf{Zählmodus:} Zählen von Liegestützen oder Sit-ups mit Hilfe von /F170/ und /F180/.
         \item[/F210/] \textsf{Start/Stopp Musikmodus:} Musik stoppt wenn Nutzer stehen bleibt, läuft wenn der Nutzer läuft. Bei diesem Modus werden keine Resultate angezeigt.
       
  	    \item[/F220/] \textsf{Modus \glqq Lauschen\&Agieren\grqq:}
- 	    \begin{itemize}
+ 	    
         \item[/F221/]Der Nutzer kann sich einen Trainingsablaufplan zusammenstellen, indem er in einer Liste Aktivitäten hinzufügt. (Liegestütze, Sit-ups, Laufen). 
         \item[/F222/] Der Nutzer erhält Sprachanweisungen per TTS für die nächste Übung während des Vorgangs. Die nächste Sprachanweisung kommt erst, wenn der Nutzer die aktuelle Aktivität vollständig beendet hat.
         \item[/F223/] Neben dem Vorgangsresultat wird dem Nutzer nach Beenden des Vorgangs auch die Zeit angezeigt, in der er die Aktivitäten absolviert hat.
         \item[/F224/] Die Sprachanweisung erfolgt in der Sprache der in-App Einstellungen.
-       \end{itemize}
-    
-      \item[] \textsf{Einstellungen:}
+   \end{itemize}
+		\textsf{Einstellungen:}
+   \begin{itemize}
         \item[/F250/] Der Nutzer kann seinen Namen in den Einstellungen ändern.
         \item[/F260/] Der Nutzer kann die Sprache der App verändern. (Möglichkeiten sind Deutsch und Englisch)
         \item[/F265/] Standardmäßig wird sich die Sprache der App automatisch an die Systemsprache des Smartphones des Nutzers anpassen.
         \item[/F270/] Der Nutzer kann die gespeicherten \Gls{Vorgangsdaten} löschen.
         \item[/F280/] Der Nutzer kann die \Gls{Steuerungsparameter} anpassen. 
         \item[/F285/] Der Nutzer kann die Schrittlänge für die Distanzmessung anpassen.
-  
-      \item[] \textsf{Sonstiges:}
+  	\end{itemize}
+		\textsf{Sonstiges:}
+	\begin{itemize}
         \item[/F290/] Aufforderung der Angabe von Name und Schrittlänge bei Erstnutzung.
         \item[/F300/] Der Nutzer kann in der App seine gesamten \Gls{Vorgangsdaten} exportieren, importieren und löschen. Dabei wird das CSV-Format genutzt. 
         \item[/F310/] Speicherung von Sit-ups, Liegestütze und Schrittanzahl für jeden Tag, an dem ein \Gls{Vorgang} aktiv war.
