--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -167,9 +167,9 @@ Unser Produkt besteht aus drei Teilen (der Bibliothek, dazu das Erweiterungsmodu
       \item\textsf{App} Heimtraining, Sport, \dots
     \end{itemize}
   \subsection{Betriebsbedingungen der App} %% hier wollte David noch was hinzufügen
-    \subsection{Physikalische Umgebung}
+    \subsubsection{Physikalische Umgebung}
       Die physikalische Umgebung der Anwendung ist hardwareabhängig.
-    \subsection{Sonstiges}
+    \subsubsection{Sonstiges}
     \begin{itemize}
       \item \textsf{Betriebsdauer:} \glqq Akkuabhängig\grqq, keine weitere Grenzen.
       \item \textsf{Qualifikation des Nutzers:} Sollte Sportübungen selbstständig ausführen können.
