Zwischenstand kollektives Korrekturlesen jetzt in echt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -196,7 +196,7 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
     \begin{itemize}
       \item[/F010/] Gemessene \Gls{Rohdaten} des \Gls{IMU} in \Gls{Echtzeit} zur Verfügung stellen.
       \item[/F030/] \Gls{Steuerungsparameter} (Abtastrate, Wertebereich Gyroskop/Beschleunigungssensor, Tiefpassfilter) ändern. %%die einzigen "Messparameter" die wir ändern können sind die abtastrate und die start/stop des samplings
-      \item[/F040/] Datenaufnahme des \Gls{IMU} starten und stoppen.
+      \item[/F040/] Die Datenaufnahme des \Gls{IMU} starten und stoppen.
     \end{itemize}
     \subsubsection{Erweiterungsmodul}
      Auswertung der ausgelesenen Daten:
